@@ -10,12 +10,14 @@ import org.springframework.boot.CommandLineRunner;
 import org.springframework.boot.SpringApplication;
 import org.springframework.boot.autoconfigure.SpringBootApplication;
 import org.springframework.context.annotation.Bean;
+import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
 
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 
 @SpringBootApplication
 public class TranslationApplication {
@@ -41,16 +43,20 @@ public class TranslationApplication {
 
 	}
 
-	@Bean
-	public CorsFilter corsFilter() {
-		final UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-		final CorsConfiguration config = new CorsConfiguration();
-		config.setAllowCredentials(true);
-		config.setAllowedOrigins(Collections.singletonList("*"));
-		config.setAllowedHeaders(Arrays.asList("Origin", "Content-Type", "Accept"));
-		config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "OPTIONS", "DELETE", "PATCH"));
-		source.registerCorsConfiguration("/**", config);
-		return new CorsFilter(source);
+	@Configuration
+	public class CorsFilterConfig {
+		@Bean
+		public CorsFilter corsFilter() {
+			final UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+			final CorsConfiguration config = new CorsConfiguration();
+			config.setAllowCredentials(true);
+			config.setAllowedOriginPatterns(List.of("*"));
+			config.setAllowedHeaders(Arrays.asList("Origin", "Content-Type", "Accept"));
+			config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "OPTIONS", "DELETE", "PATCH"));
+			source.registerCorsConfiguration("/**", config);
+			return new CorsFilter(source);
+		}
 	}
+
 
 }
